added OQ and muon selection; raised default cuts to 20 GeV

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,6 @@
+2011-01-28 Jovan Mitrevski <Jovan.Mitrevski@cern.ch>
+	* added OQ and muon selection, raised defaults to 20 GeV
+	* tagging gmsbTools-00-00-01
+
 2010-11-19 Jovan Mitrevski <Jovan.Mitrevski@cern.ch>
 	* first commit
